2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Added "error" signal
	* pitivi/ui/mainwindow.py:
	Show Error dialog box on playground bus errors.
	* pitivi/ui/viewer.py:
	slight bug

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Return gst.StateChangeReturn from setting pipeline to PLAYING in play()
	* pitivi/ui/viewer.py:
	Display error message if we couldn't set the default bin to PLAYING
	* pitivi/ui/timelineobjects.py:
	remove debug tooltip

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	Better sentence for tooltip of "Toggle Fullscreen" action
	* pitivi/ui/sourcefactories.py:
	Double-click on a row makes it play.
	Slight cleanup.

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	GNonLin >= 0.10.1
	GStreamer >= 0.10.4
	0.9.9.4 pre-release

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* application-pitivi.png:
	* pitivi.png:
	* Makefile.am:
	* pitivi.desktop.in:
	* pitivi.spec.in:
	* pitivi/ui/mainwindow.py:
	Changing pitivi-application.png to pitivi.png
	Closes #337726
	* pitivi/objectfactory.py:
	slight bugfixes and debug

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/viewer.py:
	Remove prints

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	Small variable for not displaying the "import sources" dialog box twice.

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	Added timeout of 10s for discovering each file, should be enough and
	prevents the discoverer from idling on broken files/plugins.
	Added tagging discovery.
	Only push the pipeline to PLAYING if we need a thumbnail.
	* pitivi/objectfactory.py:
	Moved getPrettyInfo to ObjectFactory class
	Added MediaStream classes to contain information about multimedia
	streams and their handling in ObjectFactory classes.
	Check if the file is valid when setting a thumbnail file.
	* pitivi/utils.py: